# elko-mail-readonly-cli

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
src/elko_mail_cli/: __main__.py
